--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "name": "ScheiBig (Marcin Jeznach)"
     },
     "publisher": "ScheiBig",
-    "version": "0.8.0",
+    "version": "0.8.1",
     "repository": {
         "url": "https://github.com/ScheiBig-Production/Always-Half-Full-theme",
         "type": "git"
@@ -16,7 +16,9 @@
     "engines": {
         "vscode": "^1.74.0"
     },
-    "categories": [ "Themes" ],
+    "categories": [
+        "Themes"
+    ],
     "contributes": {
         "themes": [
             {
